# Helioric

./: Cargo.toml  README.md  flake.nix
src/: backend.rs  control.rs  hardware.rs  main.rs  ui.rs
