[package]
name = "helioric"
version = "1.0.0"
edition = "2021"

[dependencies]
ratatui = "0.26"
crossterm = "0.27"
anyhow = "1.0"
crossbeam-channel = "0.5"
once_cell = "1.18"
regex = "1.10"
glob = "0.3"

[profile.release]
opt-level = "z"
lto = true       
codegen-units = 1
panic = "abort"  
strip = true     
